--- a/MyRestaurant/templates/includes/navbar.html
+++ b/MyRestaurant/templates/includes/navbar.html
@@ -7,9 +7,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-                {% for item in main_menu %}
-                    <li class="nav-item active"><a href="{{ item.get_absolute_url }}" class="nav-link">{{ item.title}}</a></li>
-                {% endfor %}
+{#                {% for item in main_menu %}#}
+{#                    <li class="nav-item active"><a href="{{ item.get_absolute_url }}" class="nav-link">{{ item.title}}</a></li>#}
+{#                {% endfor %}#}
+                <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+                <li class="nav-item active"> <a href="{% url 'menu' %}" class="nav-link">Menu</a></li>
+                {#  add another link#}
 
 	        </ul>
 	      </div>
