--- a/MyRestaurant/templates/blog.html
+++ b/MyRestaurant/templates/blog.html
@@ -61,7 +61,7 @@
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="includes/menu.html" class="nav-link">Menu</a></li>
+	        	<li class="nav-item"><a href="../culinary_odissey/templates/menu_second.html" class="nav-link">Menu</a></li>
 	        	<li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="reservation.html" class="nav-link">Book a table</a></li>
