--- a/MyRestaurant/templates/includes/footer.html
+++ b/MyRestaurant/templates/includes/footer.html
@@ -4,11 +4,11 @@
           <div class="col-md-6 col-lg-4">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Culinary Odyssey</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              {{ footer_item.title|safe}}
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="{{ footer_item.twitter_link|safe}}"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="{{ footer_item.facebook_link|safe}}"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="{{ footer_item.instagram_link|safe}}"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -16,20 +16,14 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Open Hours</h2>
               <ul class="list-unstyled open-hours">
-                <li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-                <li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-                <li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-                <li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-                <li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-                <li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-                <li class="d-flex"><span>Sunday</span><span> 9:00 - 02:00</span></li>
+                <li class="d-flex"><span>{{ footer_item.opening_hours|safe}}</span></li>
               </ul>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Newsletter</h2>
-            	<p>Far far away, behind the word mountains, far from the countries.</p>
+            	<p>{{ footer_item.newsletter|safe}}</p>
               <form action="#" class="subscribe-form">
                 <div class="form-group">
                   <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
@@ -43,9 +37,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>{{ footer_item.copyright_text|safe }}</p>
           </div>
         </div>
       </div>
