started creating forms for contact

--- a/MyRestaurant/contact/templates/contact.html
+++ b/MyRestaurant/contact/templates/contact.html
@@ -52,19 +52,19 @@
     </div>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Appetizer</a>
+	      <a class="navbar-brand" href="../../templates/index.html">Appetizer</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="../culinary_odissey/templates/menu_second.html" class="nav-link">Menu</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	        	<li class="nav-item"><a href="../../templates/index.html" class="nav-link">Home</a></li>
+	        	<li class="nav-item"><a href="../../templates/about.html" class="nav-link">About</a></li>
+	        	<li class="nav-item"><a href="../../culinary_odissey/templates/menu_second.html" class="nav-link">Menu</a></li>
+	        	<li class="nav-item"><a href="../../templates/blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="reservation.html" class="nav-link">Book a table</a></li>
+	          <li class="nav-item cta"><a href="../../templates/reservation.html" class="nav-link">Book a table</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -77,7 +77,7 @@
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
             <h1 class="mb-2 bread">Contact Us</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p>
+            <p class="breadcrumbs"><span class="mr-2"><a href="../../templates/index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
