--- a/MyRestaurant/templates/blog.html
+++ b/MyRestaurant/templates/blog.html
@@ -63,7 +63,7 @@
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="../culinary_odissey/templates/menu_second.html" class="nav-link">Menu</a></li>
 	        	<li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="../contact/templates/contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="reservation.html" class="nav-link">Book a table</a></li>
 	        </ul>
 	      </div>
