created contact page

--- a/MyRestaurant/templates/includes/footer.html
+++ b/MyRestaurant/templates/includes/footer.html
@@ -28,8 +28,8 @@
                     <h2 class="ftco-heading-2">Contact</h2>
                     <p>{{ footer_item.newsletter|safe }}</p>
 
-                    <a href="#" class="thumb-menu img">
-                        <img style="height: 15rem;" src="/static/images/logo1.png" alt="Instagram Photo">
+                    <a href="/" class="thumb-menu img">
+                        <img style="width: 20rem; margin-top:2rem" src="/static/images/mainlogo.png" alt="Logo">
                     </a>
 
                 </div>
