added page blog

--- a/MyRestaurant/templates/includes/footer.html
+++ b/MyRestaurant/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="ftco-footer ftco-bg-dark ftco-section">
+<footer class="ftco-footer ftco-bg-dark ftco-section" style="padding-bottom: 0rem">
     <div class="container-fluid px-md-5 px-3">
         <div class="row mb-5">
             <div class="col-md-6 col-lg-4">
@@ -31,15 +31,12 @@
                     <a href="/" class="thumb-menu img">
                         <img style="width: 20rem; margin-top:2rem" src="/static/images/mainlogo.png" alt="Logo">
                     </a>
-
                 </div>
             </div>
-
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-
-                <p>{{ footer_item.copyright_text|safe }}</p>
+                <p>{{ footer_item.copyright_text|safe }}This template is made with Colorlib</p>
             </div>
         </div>
     </div>
