fixed styles in navbar, added link order now in slide

--- a/MyRestaurant/templates/includes/slider.html
+++ b/MyRestaurant/templates/includes/slider.html
@@ -8,7 +8,7 @@
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
               <h1 class="mb-4 mt-5">{{ slide.title }}</h1>
               <p>
-                <a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a>
+                <a href="{% url 'odyssey:book_a_table'%}" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a>
                 <a href="{% url 'app:menu' %}" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a>
               </p>
             </div>
