--- a/MyRestaurant/templates/includes/navbar.html
+++ b/MyRestaurant/templates/includes/navbar.html
@@ -6,13 +6,13 @@
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
+	        <ul class="navbar-nav ml-auto" >
 
-                <li class="nav-item{% if request.path == '/' %} active{% endif %}"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item{% if request.path == '/menu/' %} active{% endif %}"> <a href="{% url 'app:menu' %}" class="nav-link">Menu</a></li>
-                <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}"> <a href="{% url 'contact:contact_page' %}" class="nav-link">Contact</a></li>
-                <li class="nav-item{% if request.path == '/blog/' %} active{% endif %}"> <a href="{% url 'blog:blog_page' %}" class="nav-link">Blog</a></li>
-                <li class="nav-item cta"><a href="{% url 'odyssey:book_a_table' %}" class="nav-link">Book a table</a></li>
+                <li class="nav-item{% if request.path == '/' %} active{% endif %}"><a href="/" class="nav-link" style="font-size: 16px">Home</a></li>
+                <li class="nav-item{% if request.path == '/menu/' %} active{% endif %}"> <a href="{% url 'app:menu' %}" class="nav-link" style="font-size: 16px">Menu</a></li>
+                <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}"> <a href="{% url 'contact:contact_page' %}" class="nav-link" style="font-size: 16px">Contact</a></li>
+                <li class="nav-item{% if request.path == '/blog/' %} active{% endif %}"> <a href="{% url 'blog:blog_page' %}" class="nav-link" style="font-size: 16px">Blog</a></li>
+                <li class="nav-item cta"><a href="{% url 'odyssey:book_a_table' %}" class="nav-link" style="font-size: 16px">Book a table</a></li>
                 {#  add another link#}
 
 	        </ul>
