preparing project for heroku

--- a/MyRestaurant/templates/includes/footer.html
+++ b/MyRestaurant/templates/includes/footer.html
@@ -31,6 +31,7 @@
                     <a href="/" class="thumb-menu img">
                         <img style="width: 20rem; margin-top:2rem" src="/static/images/mainlogo.png" alt="Logo">
                     </a>
+                    <button onclick="window.location.href='{% url 'odyssey:book_a_table' %}';" class="px-3" style="margin-top:2rem; cursor: pointer; background: #faa42c; height: 52px; font-size: 16px; width: 100%; border-radius: 0px; box-shadow: none; border: 1px solid #faa42c">Contact us</button>
                 </div>
             </div>
         </div>
