--- a/MyRestaurant/culinary_odissey/templates/reservation.html
+++ b/MyRestaurant/culinary_odissey/templates/reservation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>Culinary Odyssey</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,91 +28,101 @@
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  </head>
+</head>
 
 </html>
-  <body>
+<body>
 
-	  {% include './includes/navbar.html' %}
-    <!-- END nav -->
-    
-    <section class="hero-wrap hero-wrap-2" style="background-image: url({% static 'images/bg_2.jpg'%});" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
-      <div class="container">
+{% include './includes/navbar.html' %}
+
+<section class="hero-wrap hero-wrap-2" style="background-image: url({% static 'images/bg_2.jpg' %});"
+         data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
-          <div class="col-md-9 ftco-animate text-center">
-            <h1 class="mb-2 bread">Reservation</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Reservation <i class="ion-ios-arrow-forward"></i></span></p>
-          </div>
+            <div class="col-md-9 ftco-animate text-center">
+                <h1 class="mb-2 bread">Reservation</h1>
+                <p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i
+                        class="ion-ios-arrow-forward"></i></a></span> <span>Reservation <i
+                        class="ion-ios-arrow-forward"></i></span></p>
+            </div>
         </div>
-      </div>
-    </section>
-	
-		<section class="ftco-section ftco-no-pt ftco-no-pb">
-        <div class="container-fluid px-0">
-            <div class="row d-flex no-gutters">
-                <div class="col-md-6 order-md-last ftco-animate makereservation p-4 p-md-5 pt-5">
-                    <div class="py-md-5">
-                        <div class="heading-section ftco-animate mb-5">
-                            <span class="subheading">Book a table</span>
-                            <h2 class="mb-4">Make Reservation</h2>
-                        </div>
-                        <form action="{% url 'odyssey:home' %}" method="post" role="form">
-                            {% csrf_token %}
+    </div>
+</section>
 
-                            <div class="row">
-                                {% for field in reservation_form %}
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            {{ field.label_tag }}
-                                            {{ field }}
-                                            {{ field.errors }}
-                                        </div>
+<section class="ftco-section ftco-no-pt ftco-no-pb">
+    <div class="container-fluid px-0">
+        <div class="row d-flex no-gutters">
+            <div class="col-md-6 order-md-last ftco-animate makereservation p-4 p-md-5 pt-5">
+                <div class="py-md-5">
+                    <div class="heading-section ftco-animate mb-5">
+                        <span class="subheading">Book a table</span>
+                        <h2 class="mb-4">Make Reservation</h2>
+                    </div>
+                    <form action="{% url 'odyssey:home' %}" method="post" role="form">
+                        {% csrf_token %}
+
+                        <div class="row">
+                            {% for field in reservation_form %}
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ field.label_tag }}
+                                        {{ field }}
+                                        {{ field.errors }}
                                     </div>
-                                {% endfor %}
-                            </div>
-
-                            <div class="col-md-12 mt-3">
-                                <div class="form-group">
-                                    <input type="submit" value="Make a Reservation" class="btn btn-primary py-3 px-5">
                                 </div>
+                            {% endfor %}
+                        </div>
+
+                        <div class="col-md-12 mt-3">
+                            <div class="form-group">
+                                <input type="submit" value="Make a Reservation" class="btn btn-primary py-3 px-5">
                             </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-6 d-flex align-items-stretch pb-5 pb-md-0">
-                    <div>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28185.511678040446!2d86.88604951856101!3d27.98811467050819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e854a215bd9ebd%3A0x576dcf806abbab2!2z0JTQttC-0LzQvtC70YPQvdCz0LzQsA!5e0!3m2!1suk!2sde!4v1704202700097!5m2!1suk!2sde" width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+            </div>
+            <div class="col-md-6 d-flex align-items-stretch pb-5 pb-md-0">
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28185.511678040446!2d86.88604951856101!3d27.98811467050819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e854a215bd9ebd%3A0x576dcf806abbab2!2z0JTQttC-0LzQvtC70YPQvdCz0LzQsA!5e0!3m2!1suk!2sde!4v1704202700097!5m2!1suk!2sde"
+                            width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    {% include './includes/footer.html' %}
-
-
-  <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+{% include './includes/footer.html' %}
 
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'js/aos.js' %}"></script>
-    <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
-    <script src="{% static 'js/jquery.timepicker.min.js' %}"></script>
-    <script src="{% static 'js/scrollax.min.js' %}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="{% static 'js/google-map.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    
-  </body>
+<!-- loader -->
+<div id="ftco-loader" class="show fullscreen">
+    <svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00"/>
+    </svg>
+</div>
+
+
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+<script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+<script src="{% static 'js/aos.js' %}"></script>
+<script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
+<script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
+<script src="{% static 'js/jquery.timepicker.min.js' %}"></script>
+<script src="{% static 'js/scrollax.min.js' %}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="{% static 'js/google-map.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+
+</body>
 </html>
