--- a/MyRestaurant/culinary_odissey/templates/book_table.html
+++ b/MyRestaurant/culinary_odissey/templates/book_table.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
+
 <section class="ftco-section ftco-no-pt ftco-no-pb">
     <div class="container-fluid px-0">
         <div class="row d-flex no-gutters">
@@ -14,7 +17,13 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     {{ field.label_tag }}
-                                    {{ field }}
+                                    {% if field.name == 'date' %}
+                                        <input type="text" class="form-control datepicker" name="{{ field.name }}" value="{{ field.value|default:'' }}" placeholder="YYYY-MM-DD">
+                                    {% elif field.name == 'time' %}
+                                        <input type="text" class="form-control timepicker" name="{{ field.name }}" value="{{ field.value|default:'' }}" placeholder="HH:MM">
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
                                     {{ field.errors }}
                                 </div>
                             </div>
@@ -52,4 +61,29 @@
             width: 100%;
             height: 100%;
         }
-    </style>
+</style>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.min.js"></script>
+
+
+<script>
+    // Date picker initialization
+    $(document).ready(function () {
+        $('.datepicker').datepicker({
+            format: 'yyyy-mm-dd',
+            autoclose: true,
+            todayHighlight: true,
+        });
+    });
+
+    // Time picker initialization
+    $(document).ready(function () {
+        $('.timepicker').timepicker({
+            showMeridian: false,
+            minuteStep: 1,
+            defaultTime: false
+        });
+    });
+</script>
