added about section

--- a/MyRestaurant/templates/includes/about.html
+++ b/MyRestaurant/templates/includes/about.html
@@ -4,10 +4,9 @@
 					<div class="col-sm-10 wrap-about ftco-animate text-center">
 	          <div class="heading-section mb-4 text-center">
 	          	<span class="subheading">About</span>
-	            <h2 class="mb-4">Culinary Odyssey Restaurant</h2>
+	            <h2 class="mb-4">{{ about_item.title }}</h2>
 	          </div>
-						<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
+                        <p>{{ about_item.description }}</p>
 						<div class="video justify-content-center">
 							<a href="https://vimeo.com/254211423" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
   							<span class="ion-ios-play"></span>
