--- a/MyRestaurant/templates/includes/services.html
+++ b/MyRestaurant/templates/includes/services.html
@@ -9,15 +9,15 @@
         <div class="row">
           <div class="col-md-4 d-flex align-self-stretch ftco-animate text-center">
             <div class="media block-6 services d-block">
-              <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-cake"></span>
-              </div>
+            	    <span class="user-img mb-4" style="background-image: url({{ customer.photo.url }})"></span>
+
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Birthday Party</h3>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-4 d-flex align-self-stretch ftco-animate text-center">
             <div class="media block-6 services d-block">
               <div class="icon d-flex justify-content-center align-items-center">
